--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Box Management System</title>
-    <link rel="stylesheet" href="box-style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -80,7 +80,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
 
-    <script src="box-script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
